# argus

./: .dockerignore  .env  .gitignore  README.md  README_DEPLOY.md  README_operator.md  README_surya_adapter.md  build_speed_dataset.py  deploy.sh  package.json  pnpm-lock.yaml  pyproject.toml  turbo.json
.deploy/: api.Dockerfile  cronjobs.txt  docker-compose.yml  frontend.Dockerfile  nginx-proxy-up.sh
.deploy/alloy/: config.alloy
.deploy/nginx/: default.conf
.deploy/nginx-proxy/: custom-proxy-config.conf
.github/workflows/: deploy.yml
apps/api/: package.json  pyproject.toml
apps/api-public/: Dockerfile  package.json  pyproject.toml
apps/api-public/app/: main.py  refresh_forecast.py
apps/api-public/app/core/: config.py  predictor.py
apps/api-public/app/routers/: api.py  auth.py  forecast.py  metrics.py  public.py
apps/api-public/app/stats/: metrics.py
apps/api-public/src/api_public/: config.py  main.py
apps/api-public/src/api_public/dependencies/: container.py
apps/api-public/src/api_public/routes/: forecast.py
apps/api-public/src/api_public/schemas/: forecast.py
apps/api-public/src/api_public/services/: forecast_service.py
apps/api-public/tests/: test_smoke_api.py
apps/api/app/: main.py
apps/api/app/routers/: forecast.py  healthcheck.py
apps/api/app/routers/private/: forecast.py  model.py  probability.py  risk.py
apps/api/app/routers/public/: forecast.py  metrics.py  observations.py
apps/api/app/schemas/: response.py
apps/api/app/stats/: metrics.py
apps/api/src/commands/: _runner.py  generate_bz_probability.py  generate_kp_forecast.py  generate_wind_forecast.py
apps/api/tests/: test_smoke_api.py
apps/web/: Dockerfile  README_chart.md  eslint.config.js  package.json
apps/web/app/: globals.css  layout.tsx  page.module.css  page.tsx
apps/web/app/_components/: Header.tsx  HeatMap.tsx  ProbabilityPanel.tsx  ProbabilityStrip.tsx  RiskPanel.tsx  RiskStrip.tsx  WindChart.tsx  header.css  windchart.css
apps/web/app/_utils/: date_time.tsx  transform.js  transform.tsx
apps/web/app/components/: ProbabilityPanel.tsx  ProbabilityStrip.tsx  WindChart.tsx
apps/web/app/dashboard/: page.tsx
apps/web/app/data/: mockData.js
apps/web/app/forecast/: forecast.module.css  page.tsx
apps/web/app/forecast/_components/: ProbabilityPanel.tsx  ProbabilityStrip.tsx  RiskPanel.tsx  (+2 more)
apps/web/app/help/: page.tsx
apps/web/app/metrics/: page.tsx
apps/web/app/utils/: transform.js
apps/web/components/: Header.tsx
apps/web/data/: mockForecastData.js
apps/web/public/: robots.txt
configs/: models_registry.yaml  project.yaml
configs/surya/: wind_forecast.yaml
infra/docker/: compose-app.yml  compose-dev.yml  compose-proxy.yml  docker-compose.yml  nginx-proxy-up.sh
infra/docker/nginx/: gzip.conf
infra/docker/nginx/templates/: http.conf.template
notebooks/forecast/: data_fetch_sdo.ipynb
notebooks/wind_forecast/: event_probability.ipynb  f_huxt.ipynb  f_no_cycles.ipynb  f_no_plasma.ipynb  forecast_analyze.ipynb
notebooks_examples/forecast/: data_fetch_dscovr.ipynb  data_fetch_omni.ipynb  data_fetch_sdo.ipynb
notebooks_examples/wind_forecast/: event_probability.ipynb  f_no_cycles.ipynb  f_no_cycles_huxt.ipynb  f_no_persistance.ipynb  f_only_cycles.ipynb
reports/: speed_baseline_metrics_by_lead.csv
scripts/: README_operator.md  build_forecast_dataset.py  build_forecast_scalers.py  build_huxt_ensemble_features.py  build_huxt_proxy_member_forecasts.py  build_sdo_manifest.py  build_training_dataset.py  export_surya_embeddings.py  fetch_historical.py  get_forecast.py  load_historical.py  load_historical_data.py  manage.py  merge_huxt_features.py  run_recurrent_huxt.py  run_surya_baseline_wind.py  run_surya_image_forecast.py  sync_dscovr.py  sync_omni.py  sync_sdo.py  train_events.py  train_speed_baseline.py  train_speed_quantiles.py
(+3 files in other folders)
