[project]
name = "argus-api-public"
version = "0.1.0"
dependencies = [
  "pydantic",
  "pydantic-settings",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "pydantic>=2.7",
  "forecast-core",
  "common"
]

[tool.uv.sources]
common = { workspace = true }
forecast-core = { workspace = true }

[tool.uv.workspace]
members = [
    "../../packages/common",
    "../../packages/forecast-core",
]
