[project]
name = "argus-api-public"
version = "0.1.0"
dependencies = [
  "requests",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "forecast-core",
  "common"
]

[tool.uv.sources]
common = { workspace = true }
forecast-core = { workspace = true }

[tool.uv.workspace]
members = [
    "../../packages/common",
    "../../packages/forecast-core",
]
