[project]
name = "argus-api"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
  "requests",
  "fastapi>=0.115",
  "uvicorn>=0.30",
  "forecast",
  "forecast-core",
  "common",
  "sentry-sdk>=2.61.1",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.14.1",
]

[tool.uv.sources]
common = { workspace = true }
forecast = { workspace = true }
forecast-core = { git = "ssh://git@github.com/a-kryvenko/argus-forecast-core.git", branch = "master" }

[tool.uv.workspace]
members = [
    "../../packages/common",
    "../../packages/forecast",
]
